Fix description text align

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -51,7 +51,6 @@
         &-text {
           padding: 7vh 7vh 5vh;
           line-height: 1.7;
-          text-align: justify;
         }
       }
 
@@ -86,7 +85,7 @@
         }
       }
 
-      &-text { text-align: justify; }
+      &-text { text-align: left; }
 
       &-title {
         margin-bottom: 3vh;
