--- a/_sass/list-with-images.scss
+++ b/_sass/list-with-images.scss
@@ -47,11 +47,7 @@
     display: flex;
     flex-direction: column;
     max-width: 28%;
-
-    .description,
-    .message {
-      text-align: center;
-    }
+    .message { text-align: center; }
 
     .description {
       font-size: 1em;
